crates/keron-lang/tests/corpus/errors/check/match_duplicate_neg_zero_arm.keron
fn pick(d: Double): Int {
  match d {
    0.0 => 1,
    -0.0 => 2,
    _ => 3,
  }
}
